# pico-w-template

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  header.html
.github/workflows/: cmake.yml  codeql.yml
include/: lwipopts.h  template.h
src/: CMakeLists.txt  main.c
